feat: add Celery - Nginx - Channels - Redis | tasks will be populate db | Implemented frontend APIs and sockets

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ DJANGO_SUPERUSER_EMAIL=admin@yourdomain.com
 DJANGO_SUPERUSER_PASSWORD=your_secure_admin_password
 
 DOCKER_ENV=true
+
+# Environment Mode (development or production)
+APP_ENV=production
+
+# Redis/Celery Configuration
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
