--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,59 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,linux
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
+
+### Project Specific ###
+
+# Frontend build files
+frontend/node_modules/
+frontend/dist/
+frontend/.angular/
+frontend/coverage/
+frontend/*.log
+
+# Static files
+staticfiles/
+media/
+
+# Database dumps
+*.sql
+*.dump
+*.sqlite3
+
+# Redis dumps
+dump.rdb
+appendonly.aof
+
+# Celery
+celerybeat-schedule.db
+
+# IDE specific
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Docker volumes (local development)
+postgres_data/
+
+# Poetry
+poetry.lock
+
+# Test artifacts
+htmlcov/
+.coverage
+.pytest_cache/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+
+# Log files
+logs/
+*.log
+
+# Environment variables
+.env.local
+.env.production
+.env.development
