--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "channels-redis (>=4.2.0,<5.0.0)",
     "daphne (>=4.0.0,<5.0.0)",
     "django-cors-headers (>=4.3.0,<5.0.0)",
-    "rich (>=14.1.0,<15.0.0)"
+    "rich (>=14.1.0,<15.0.0)",
+    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
 ]
 
 
